--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,5 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
     plan: free
-    rootDir: app
+    rootDir: acp_agent
 
